// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QrCodeSlot - Snapshots > matches snapshot for a non-default size 1`] = `
<div>
  <svg
    class=""
    data-testid="qrcode-svg"
    data-value="auth-url"
    height="220"
    width="220"
  />
  <img
    alt="Pubky Ring"
    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"
    data-testid="next-image"
    height="60"
    src="/images/ring-logo.svg"
    width="60"
  />
</div>
`;

exports[`QrCodeSlot - Snapshots > matches snapshot for active QR with hover effect 1`] = `
<div>
  <svg
    class="transition-opacity group-hover:opacity-90 group-active:opacity-80"
    data-testid="qrcode-svg"
    data-value="auth-url"
    height="176"
    width="176"
  />
  <img
    alt="Pubky Ring"
    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transition-opacity group-hover:opacity-90 group-active:opacity-80"
    data-testid="next-image"
    height="48"
    src="/images/ring-logo.svg"
    width="48"
  />
</div>
`;

exports[`QrCodeSlot - Snapshots > matches snapshot for active QR without hover effect 1`] = `
<div>
  <svg
    class=""
    data-testid="qrcode-svg"
    data-value="auth-url"
    height="176"
    width="176"
  />
  <img
    alt="Pubky Ring"
    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"
    data-testid="next-image"
    height="48"
    src="/images/ring-logo.svg"
    width="48"
  />
</div>
`;

exports[`QrCodeSlot - Snapshots > matches snapshot for expired state with inline reload button 1`] = `
<div>
  <button
    aria-label="Reload QR"
    class="group absolute inset-0 flex cursor-pointer items-center justify-center p-4"
    type="button"
  >
    <img
      alt=""
      class="rounded-md transition-opacity group-hover:opacity-90 group-active:opacity-80"
      data-testid="next-image"
      height="176"
      src="/images/qr-blurred.png"
      width="176"
    />
    <span
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"
    >
      Click to reload
    </span>
  </button>
</div>
`;

exports[`QrCodeSlot - Snapshots > matches snapshot for expired state without inline reload button 1`] = `
<div>
  <img
    alt=""
    class="rounded-md transition-opacity group-hover:opacity-90 group-active:opacity-80"
    data-testid="next-image"
    height="176"
    src="/images/qr-blurred.png"
    width="176"
  />
  <span
    class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"
  >
    Click to reload
  </span>
</div>
`;

exports[`QrCodeSlot - Snapshots > matches snapshot for loading state 1`] = `
<div>
  <div
    class="items-center gap-2"
    data-testid="container"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-loader-circle size-8 animate-spin text-background"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
    <small
      class="text-background"
      data-testid="typography"
    >
      Generating...
    </small>
  </div>
</div>
`;
